class Passage{
    constructor(id, name, tags, source){
        this._tags = tags;
        this._id = id;
        this._name = name;
        this._source = source;
    }
}
