import Passage from './passage.js';

class Story{
    constructor(){
        this._passages = {};
        this._styles = [];
        this._scripts = [];
        this._name = '';
        this._ifid = '';
    }
}